<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_calculate" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_Item"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_Valor"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_Data"
        android:inputType="date" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_Observacao"
        android:inputType="textMultiLine" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="16dp"
            android:text="@string/btnLimpar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:padding="16dp"
            android:text="@string/btnSalvar" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnFinalizar" />


</LinearLayout>